# rust-cli-translate-app

./: Cargo.toml  README.md  install.sh
.github/workflows/: build.yml  rust.yml
src/: lang.rs  main.rs
tests/: cli_tests.rs
