[package]
name = "translate-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
colored = "2.0"
clipboard = "0.5.0"
# Yeni bağımlılık eklendi
sys-locale = "0.3.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
